UI: Fix tooltip appearing over other applications windows - fixes #1810
rn=

(integrated from the KomodoIDE master branch change b33e694786 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/b33e694786

--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -53,6 +53,10 @@ toolbar[printpreview="true"] {
 }
 
 popup[type="tooltip"] {
+  -moz-binding: url('chrome://komodo/content/bindings/widgets.xml#kopaneltooltip');
+}
+
+tooltip {
   -moz-binding: url('chrome://komodo/content/bindings/widgets.xml#kotooltip');
 }
 
