--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -48,6 +48,10 @@ toolbar[printpreview="true"] {
 }
 
 popup[type="tooltip"] {
+  -moz-binding: url('chrome://komodo/content/bindings/widgets.xml#kopaneltooltip');
+}
+
+tooltip {
   -moz-binding: url('chrome://komodo/content/bindings/widgets.xml#kotooltip');
 }
 
