UI: Collapse spacers that shouldnt really even exist to begin with
(integrated from the KomodoIDE master branch change 487da33f50 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/487da33f50

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -123,3 +123,10 @@
 {
     margin-left: 10px;
 }
+
+/* Spacers that shouldnt even really exist */
+notificationbox spacer,
+scintilla spacer
+{
+    visibility: collapse;
+}
