UI: Don't give height to menupopup overflow spacers
(integrated from the KomodoIDE master branch change 48709fdc86 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/48709fdc86

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -623,11 +623,15 @@ separator
 vbox > spacer,
 :not(hbox) > spacer
 {
-    height: 0.5rem;
-
-    &.slim
+    &:not(.arrowscrollbox-overflow-end-indicator)
+     :not(.arrowscrollbox-overflow-start-indicator)
     {
-        height: 0.25rem;
+        height: 0.5rem;
+
+        &.slim
+        {
+            height: 0.25rem;
+        }
     }
 }
 
