Breadcrumbs: Remove sectionlist dependency
(integrated from the KomodoIDE master branch change c280690d64 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/c280690d64

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -421,6 +421,11 @@ statusbar
     {
         min-width: 200px;
     }
+
+    hbox[anonid="statusbar-message-deck-default"]
+    {
+        overflow: hidden;
+    }
 }
 
 &[classic-statusbar="true"]
