--- a/src/modules/console/content/less/console.less
+++ b/src/modules/console/content/less/console.less
@@ -294,8 +294,7 @@ a:hover {
     position: absolute;
     display: none;
     z-index: 9999;
-    height: 80%;
-    max-height: 200px;
+    max-height: 80vh;
     overflow: hidden;
     overflow-y: auto;
     box-sizing: border-box;
