--- a/src/chrome/komodo/skin/global/colors.less
+++ b/src/chrome/komodo/skin/global/colors.less
@@ -2,6 +2,7 @@
 
 /* Yes these 2 are not colors, doesnt warrant a rename at this time */
 @font: 'Lucida Grande', 'Segoe UI', 'Droid Sans', 'Open Sans', sans-serif;
+@editor-font: monospace;
 @size: 0.9rem;
 
 /* Main Window */
