UI: Extend dialog styling to tooltips
(integrated from the KomodoIDE master branch change 08000ac4d2 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/08000ac4d2

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -762,7 +762,8 @@ button[type="checkbox"][checked="true"]
 .dialog:root,
 dialog:root,
 .pref-window,
-panel.dialog
+panel.dialog,
+tooltip.dialog
 {
     &:not(.embedded)
     {
