Icons: Fileicons have been updated to properly match their 14x14 canvas, some icons have been entirely replaced in the process
rn=

(integrated from the KomodoIDE master branch change c1b2a81da8 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/c1b2a81da8

--- a/src/chrome/komodo/skin/global/components/languages.less
+++ b/src/chrome/komodo/skin/global/components/languages.less
@@ -1,7 +1,7 @@
 /**
  * Language icons for the language menulists and tree views.
  */
-.languageicon,
+.languageicon:not([style]),
 treechildren::-moz-tree-image(DefaultLanguage) {
   /* The default language icon. */
   list-style-image: url("koicon://ko-language/Text");
