--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -759,7 +759,8 @@ button[type="checkbox"][checked="true"]
 
 /* Modals */
 
-:root:not(#komodo_main):not(page)
+:root:not(#komodo_main):not(page),
+panel.dialog
 {
     &:not(.embedded)
     {
@@ -969,7 +970,8 @@ window.embedded.widget
     -moz-box-flex: 0;
 }
 
-.modal-ui,
+.modal-ui:not(:root),
+.modal-ui-inner,
 .modal-ui wizardpage
 {
     .ui-title
@@ -977,6 +979,11 @@ window.embedded.widget
         margin-bottom: 4px;
     }
     
+    & > .ui-hbox.fullwidth
+    {
+        padding-left: 50px;
+    }
+
     & > .ui-hbox:not(.ui-title):not(.buttons-ui)
     {
         padding-right: 50px;
