sdk: progress: support determined progress
(integrated from the KomodoIDE master branch change 021e5f3960 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/021e5f3960

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -104,11 +104,16 @@
     .spinner(@special);
 }
 
-.loader.enabled
+.loader.enabled:not([determined="true"])
 {
     .loader(@special);
 }
 
+.loader[determined="true"]
+{
+    background: @special;
+    height: 1rem;
+}
 
 // All text fields
 ::-moz-selection
@@ -129,4 +134,32 @@ notificationbox spacer,
 scintilla spacer
 {
     visibility: collapse;
+}
+
+/* Progress Indicator */
+
+.ui-progress-parent
+{
+    min-width: 350px;
+
+    .loader
+    {
+        margin-bottom: 6px;
+    }
+
+    label,
+    .loader
+    {
+        padding-right: 6px;
+    }
+}
+
+.dialog.ui-progress-parent
+{
+    max-width: 350px;
+
+    label
+    {
+        width: 350px;
+    }
 }
