icons: Add home icon
(integrated from the KomodoIDE master branch change 0ad49b24d7 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/0ad49b24d7

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -137,11 +137,12 @@ button, toolbarbutton, menuitem, dropmarker, tab,
 .komodo-button-bugs { .icon(); .icon-bug(); }
 .native-print-icon { .icon-printer3(); }
 .help-icon { .icon-question4(); }
-.newfolder-icon{.icon(); .icon-folder-plus(); margin-right: 6px; }
-.refresh-icon{.icon(); .icon-refresh(); margin-right: 6px; }
-.upfolder-icon{.icon(); .icon-folder-upload(); margin-right: 6px; }
-.goback-icon{.icon(); .icon-arrow-left(); margin-right: 6px; }
-.goforward-icon{.icon(); .icon-arrow-right(); margin-right: 6px; }
+.newfolder-icon{.icon(); .icon-folder-plus(); }
+.refresh-icon{.icon(); .icon-refresh(); }
+.upfolder-icon{.icon(); .icon-folder-upload(); }
+.goback-icon{.icon(); .icon-arrow-left(); }
+.goforward-icon{.icon(); .icon-arrow-right(); }
+.gohome-icon { .icon(); .icon-home(); }
 .columns-icon { .icon(); .icon-columns(); }
 .find-copy-icon{ .icon(); .icon-files-empty2();}
 .warning-icon{ .icon(); .icon-warning();}
