--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?sc9q5w');
-  src:  url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?sc9q5w#iefix') format('embedded-opentype'),
-    url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?sc9q5w') format('truetype'),
-    url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?sc9q5w') format('woff'),
-    url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?sc9q5w#icomoon') format('svg');
+  src:  url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?8wo5qf');
+  src:  url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?8wo5qf#iefix') format('embedded-opentype'),
+    url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?8wo5qf') format('truetype'),
+    url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?8wo5qf') format('woff'),
+    url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?8wo5qf#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -26,11 +26,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-Yarn {
-  &:before {
-    content: @icon-Yarn;
-  }
-}
 .icon-cordova {
   &:before {
     content: @icon-cordova;
@@ -1146,6 +1141,11 @@
     content: @icon-user;
   }
 }
+.icon-home {
+  &:before {
+    content: @icon-home;
+  }
+}
 .icon-cloud {
   &:before {
     content: @icon-cloud;
@@ -1161,3 +1161,14 @@
     content: @icon-angle-right2;
   }
 }
+.icon-angle-up {
+  &:before {
+    content: @icon-angle-up;
+  }
+}
+.icon-angle-down2 {
+  &:before {
+    content: @icon-angle-down2;
+  }
+}
+
