--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -1,6 +1,5 @@
 @icomoon-font-path: "fonts";
 
-@icon-Yarn: "\e907";
 @icon-cordova: "\e903";
 @icon-phonegap: "\e904";
 @icon-gulp: "\e905";
@@ -224,6 +223,10 @@
 @icon-case-sensitive: "\ee92";
 @icon-smart-case: "\ee93";
 @icon-user: "\f007";
+@icon-home: "\f015";
 @icon-cloud: "\f0c2";
 @icon-angle-left: "\f104";
 @icon-angle-right2: "\f106";
+@icon-angle-up: "\f108";
+@icon-angle-down2: "\f109";
+
