Icons: Added icons for package managers
(integrated from the KomodoIDE master branch change 319343bee2 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/319343bee2

--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?8wo5qf');
-  src:  url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?8wo5qf#iefix') format('embedded-opentype'),
-    url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?8wo5qf') format('truetype'),
-    url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?8wo5qf') format('woff'),
-    url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?8wo5qf#icomoon') format('svg');
+  src:  url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ryoi8a');
+  src:  url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ryoi8a#iefix') format('embedded-opentype'),
+    url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?ryoi8a') format('truetype'),
+    url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?ryoi8a') format('woff'),
+    url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?ryoi8a#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -26,204 +26,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-cordova {
+.icon-python {
   &:before {
-    content: @icon-cordova;
+    content: @icon-python;
   }
 }
-.icon-phonegap {
+.icon-php {
   &:before {
-    content: @icon-phonegap;
-  }
-}
-.icon-gulp {
-  &:before {
-    content: @icon-gulp;
-  }
-}
-.icon-grunt {
-  &:before {
-    content: @icon-grunt;
-  }
-}
-.icon-menu4 {
-  &:before {
-    content: @icon-menu4;
-  }
-}
-.icon-down-tiny {
-  &:before {
-    content: @icon-down-tiny;
-  }
-}
-.icon-markdown {
-  &:before {
-    content: @icon-markdown;
-  }
-}
-.icon-save {
-  &:before {
-    content: @icon-save;
-  }
-}
-.icon-save-all {
-  &:before {
-    content: @icon-save-all;
-  }
-}
-.icon-layout-left {
-  &:before {
-    content: @icon-layout-left;
-  }
-}
-.icon-layout-right {
-  &:before {
-    content: @icon-layout-right;
-  }
-}
-.icon-layout-bottom {
-  &:before {
-    content: @icon-layout-bottom;
-  }
-}
-.icon-layout-top {
-  &:before {
-    content: @icon-layout-top;
-  }
-}
-.icon-tab-down {
-  &:before {
-    content: @icon-tab-down;
-  }
-}
-.icon-inspect {
-  &:before {
-    content: @icon-inspect;
-  }
-}
-.icon-regexp {
-  &:before {
-    content: @icon-regexp;
-  }
-}
-.icon-menu {
-  &:before {
-    content: @icon-menu;
-  }
-}
-.icon-menu2 {
-  &:before {
-    content: @icon-menu2;
-  }
-}
-.icon-commit {
-  &:before {
-    content: @icon-commit;
-  }
-}
-.icon-add {
-  &:before {
-    content: @icon-add;
-  }
-}
-.icon-edit {
-  &:before {
-    content: @icon-edit;
-  }
-}
-.icon-edit2 {
-  &:before {
-    content: @icon-edit2;
-  }
-}
-.icon-revert {
-  &:before {
-    content: @icon-revert;
-  }
-}
-.icon-remove {
-  &:before {
-    content: @icon-remove;
-  }
-}
-.icon-update {
-  &:before {
-    content: @icon-update;
-  }
-}
-.icon-diff {
-  &:before {
-    content: @icon-diff;
-  }
-}
-.icon-history {
-  &:before {
-    content: @icon-history;
-  }
-}
-.icon-history2 {
-  &:before {
-    content: @icon-history2;
-  }
-}
-.icon-checkout {
-  &:before {
-    content: @icon-checkout;
-  }
-}
-.icon-push {
-  &:before {
-    content: @icon-push;
-  }
-}
-.icon-check {
-  &:before {
-    content: @icon-check;
-  }
-}
-.icon-perl {
-  &:before {
-    content: @icon-perl;
-  }
-}
-.icon-step-into {
-  &:before {
-    content: @icon-step-into;
-  }
-}
-.icon-step-over {
-  &:before {
-    content: @icon-step-over;
-  }
-}
-.icon-step-out {
-  &:before {
-    content: @icon-step-out;
-  }
-}
-.icon-record {
-  &:before {
-    content: @icon-record;
-  }
-}
-.icon-save-circle {
-  &:before {
-    content: @icon-save-circle;
-  }
-}
-.icon-database2 {
-  &:before {
-    content: @icon-database2;
-  }
-}
-.icon-markup {
-  &:before {
-    content: @icon-markup;
-  }
-}
-.icon-code2 {
-  &:before {
-    content: @icon-code2;
+    content: @icon-php;
   }
 }
 .icon-quill4 {
@@ -529,6 +339,216 @@
 .icon-scc {
   &:before {
     content: @icon-scc;
+  }
+}
+.icon-trophy4 {
+  &:before {
+    content: @icon-trophy4;
+  }
+}
+.icon-yarn {
+  &:before {
+    content: @icon-yarn;
+  }
+}
+.icon-cordova {
+  &:before {
+    content: @icon-cordova;
+  }
+}
+.icon-phonegap {
+  &:before {
+    content: @icon-phonegap;
+  }
+}
+.icon-gulp {
+  &:before {
+    content: @icon-gulp;
+  }
+}
+.icon-grunt {
+  &:before {
+    content: @icon-grunt;
+  }
+}
+.icon-menu4 {
+  &:before {
+    content: @icon-menu4;
+  }
+}
+.icon-down-tiny {
+  &:before {
+    content: @icon-down-tiny;
+  }
+}
+.icon-markdown {
+  &:before {
+    content: @icon-markdown;
+  }
+}
+.icon-save {
+  &:before {
+    content: @icon-save;
+  }
+}
+.icon-save-all {
+  &:before {
+    content: @icon-save-all;
+  }
+}
+.icon-layout-left {
+  &:before {
+    content: @icon-layout-left;
+  }
+}
+.icon-layout-right {
+  &:before {
+    content: @icon-layout-right;
+  }
+}
+.icon-layout-bottom {
+  &:before {
+    content: @icon-layout-bottom;
+  }
+}
+.icon-layout-top {
+  &:before {
+    content: @icon-layout-top;
+  }
+}
+.icon-tab-down {
+  &:before {
+    content: @icon-tab-down;
+  }
+}
+.icon-inspect {
+  &:before {
+    content: @icon-inspect;
+  }
+}
+.icon-regexp {
+  &:before {
+    content: @icon-regexp;
+  }
+}
+.icon-menu {
+  &:before {
+    content: @icon-menu;
+  }
+}
+.icon-menu2 {
+  &:before {
+    content: @icon-menu2;
+  }
+}
+.icon-commit {
+  &:before {
+    content: @icon-commit;
+  }
+}
+.icon-add {
+  &:before {
+    content: @icon-add;
+  }
+}
+.icon-edit {
+  &:before {
+    content: @icon-edit;
+  }
+}
+.icon-edit2 {
+  &:before {
+    content: @icon-edit2;
+  }
+}
+.icon-revert {
+  &:before {
+    content: @icon-revert;
+  }
+}
+.icon-remove {
+  &:before {
+    content: @icon-remove;
+  }
+}
+.icon-update {
+  &:before {
+    content: @icon-update;
+  }
+}
+.icon-diff {
+  &:before {
+    content: @icon-diff;
+  }
+}
+.icon-history {
+  &:before {
+    content: @icon-history;
+  }
+}
+.icon-history2 {
+  &:before {
+    content: @icon-history2;
+  }
+}
+.icon-checkout {
+  &:before {
+    content: @icon-checkout;
+  }
+}
+.icon-push {
+  &:before {
+    content: @icon-push;
+  }
+}
+.icon-check {
+  &:before {
+    content: @icon-check;
+  }
+}
+.icon-perl {
+  &:before {
+    content: @icon-perl;
+  }
+}
+.icon-step-into {
+  &:before {
+    content: @icon-step-into;
+  }
+}
+.icon-step-over {
+  &:before {
+    content: @icon-step-over;
+  }
+}
+.icon-step-out {
+  &:before {
+    content: @icon-step-out;
+  }
+}
+.icon-record {
+  &:before {
+    content: @icon-record;
+  }
+}
+.icon-save-circle {
+  &:before {
+    content: @icon-save-circle;
+  }
+}
+.icon-database2 {
+  &:before {
+    content: @icon-database2;
+  }
+}
+.icon-markup {
+  &:before {
+    content: @icon-markup;
+  }
+}
+.icon-code2 {
+  &:before {
+    content: @icon-code2;
   }
 }
 .icon-regexp-14 {
