--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -1,45 +1,7 @@
 @icomoon-font-path: "fonts";
 
-@icon-cordova: "\e903";
-@icon-phonegap: "\e904";
-@icon-gulp: "\e905";
-@icon-grunt: "\e906";
-@icon-menu4: "\e902";
-@icon-down-tiny: "\e901";
-@icon-markdown: "\e900";
-@icon-save: "\e000";
-@icon-save-all: "\e001";
-@icon-layout-left: "\e018";
-@icon-layout-right: "\e019";
-@icon-layout-bottom: "\e01a";
-@icon-layout-top: "\e01b";
-@icon-tab-down: "\e01c";
-@icon-inspect: "\e01d";
-@icon-regexp: "\e01e";
-@icon-menu: "\e01f";
-@icon-menu2: "\e020";
-@icon-commit: "\e021";
-@icon-add: "\e022";
-@icon-edit: "\e023";
-@icon-edit2: "\e024";
-@icon-revert: "\e025";
-@icon-remove: "\e026";
-@icon-update: "\e027";
-@icon-diff: "\e028";
-@icon-history: "\e029";
-@icon-history2: "\e02a";
-@icon-checkout: "\e02b";
-@icon-push: "\e02c";
-@icon-check: "\e02d";
-@icon-perl: "\e02e";
-@icon-step-into: "\e02f";
-@icon-step-over: "\e030";
-@icon-step-out: "\e031";
-@icon-record: "\e032";
-@icon-save-circle: "\e033";
-@icon-database2: "\e034";
-@icon-markup: "\e035";
-@icon-code2: "\e036";
+@icon-python: "\e909";
+@icon-php: "\e907";
 @icon-quill4: "\e91b";
 @icon-bookmark: "\e994";
 @icon-files-empty2: "\e9a0";
@@ -101,6 +63,48 @@
 @icon-eye4: "\ecae";
 @icon-eye3: "\ecb4";
 @icon-scc: "\ef46";
+@icon-trophy4: "\ebab";
+@icon-yarn: "\e908";
+@icon-cordova: "\e903";
+@icon-phonegap: "\e904";
+@icon-gulp: "\e905";
+@icon-grunt: "\e906";
+@icon-menu4: "\e902";
+@icon-down-tiny: "\e901";
+@icon-markdown: "\e900";
+@icon-save: "\e000";
+@icon-save-all: "\e001";
+@icon-layout-left: "\e018";
+@icon-layout-right: "\e019";
+@icon-layout-bottom: "\e01a";
+@icon-layout-top: "\e01b";
+@icon-tab-down: "\e01c";
+@icon-inspect: "\e01d";
+@icon-regexp: "\e01e";
+@icon-menu: "\e01f";
+@icon-menu2: "\e020";
+@icon-commit: "\e021";
+@icon-add: "\e022";
+@icon-edit: "\e023";
+@icon-edit2: "\e024";
+@icon-revert: "\e025";
+@icon-remove: "\e026";
+@icon-update: "\e027";
+@icon-diff: "\e028";
+@icon-history: "\e029";
+@icon-history2: "\e02a";
+@icon-checkout: "\e02b";
+@icon-push: "\e02c";
+@icon-check: "\e02d";
+@icon-perl: "\e02e";
+@icon-step-into: "\e02f";
+@icon-step-over: "\e030";
+@icon-step-out: "\e031";
+@icon-record: "\e032";
+@icon-save-circle: "\e033";
+@icon-database2: "\e034";
+@icon-markup: "\e035";
+@icon-code2: "\e036";
 @icon-regexp-14: "\eed1";
 @icon-search: "\f002";
 @icon-star: "\f005";
